kustomize/overlays/staging/app-patches.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: staging-backend-service-canary
      stableService: staging-backend-service-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: staging-mern-route
  template:
    spec:
      containers:
        - name: backend
          image: ghcr.io/atkaridarshan04/cloudnative-devops-blueprint/bookstore-backend # Tag managed by Kustomize images

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: staging-frontend-service-canary
      stableService: staging-frontend-service-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: staging-mern-route
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/atkaridarshan04/cloudnative-devops-blueprint/bookstore-frontend # Tag managed by Kustomize images
