kustomize/overlays/staging/httproute-patch.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mern-route
spec:
  hostnames:
    - staging.cndb.atkaridarshan.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: staging-frontend-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /books
      backendRefs:
        - name: staging-backend-service
          port: 8000
